# jira_api_predictor_x

./: Dockerfile  README.md  pyproject.toml
jira_predictor_api/: features.py  json_to_df.py  main.py  model.py  preprocessing.py  rest_api.py  test.py
jira_predictor_api/data/: DATA_HERE.txt
